--- a/WEEK 03/WEEK 3.1/package.json
+++ b/WEEK 03/WEEK 3.1/package.json
@@ -2,7 +2,7 @@
   "name": "week-3.1",
   "version": "1.0.0",
   "description": "",
-  "main": "index2.js",
+  "main": "index3.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -11,6 +11,7 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "zod": "^4.1.12"
   }
 }
